# camo-gen

./: .gitignore  README.md
c/: CMakePresets.json  README.md
c++/: CMakeLists.txt  README.md  vcpkg.json
c/src/: main.cpp
golang/: camogen.go  go.mod
rust/camogen/: Cargo.toml
rust/demo/: Cargo.toml
rust/wasm/: Cargo.toml
